--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    a{
+        @apply text-orange-500 
+    }
+}
+
+@layer utilities {
+    .text-bigger-hello{
+        @apply text-3xl font-semibold text-red-500
+    }
+}
+
+@layer components {
+    .primary-btn{
+        @apply w-full bg-orange-500 text-white text-lg 
+        font-medium rounded-md text-center hover:bg-orange-400
+        transition-colors
+    }
+}
+
+
